散歩中の地図において、現在地と地図を同期できるようにした
